# CLog

./: CMakeLists.txt  README.md
include/: Constant.h  JournalAppender.h  LogAPI.h
lib/include/log4cpp/: Makefile
lib/include/log4cpp/threading/: Makefile
src/: JournalAppender.cpp  LogAPI.cpp  main.cpp
